src/app/login/login.component.scss
.inner-box {
	position: absolute;
	width: 448px;
	height: 386px;
	left: 496px;
	top: 230px;

	background: #EAEFF3;
	border-radius: 10px;
}

.isadmin {
	font-family: Work Sans;
	font-style: normal;
	font-weight: 600;
	font-size: 16px;
	line-height: 19px;
	margin-left: 30px;
	width: 50%;
	display: inline-block;
}

.user {
	padding: 3rem 5rem 2rem 5rem;
}

.entry {
	margin-top: 10px;
	width: 100%;
	height: 37px;
	background: #FFFFFF;
	border-radius: 7px;
}

.pass {
	padding: 1rem 5rem;
}

.register {
	padding-left: 45px;
	padding-top: 20px;
	display: inline-block
}

.underl {
	text-decoration: underline;
}

.login {
	width: 120px;
	height: 35px;

	background: #3E8EDE;
	border-radius: 100px;
	font-family: Work Sans;
	font-style: normal;
	font-weight: 600;
	font-size: 16px;
	line-height: 19px;
	/* identical to box height */

	color: #FFFFFF;

	float: right;
	margin-left: 40px;
}

#login {
	margin-right: 10px;
}

.textlabel {
	height: 22px;

	font-family: Nunito Sans;
	font-style: normal;
	font-weight: 600;
	font-size: 16px;
	line-height: 22px;
	/* identical to box height */

	color: #000000;
}

.text {
	margin-top: 8px;
	font-family: Work Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 14px;
	line-height: 16px;

	color: #000000;
}

#recover {
	text-decoration-line: underline;
}

.switch {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 34px;
}

.switch input {
opacity: 0;
width: 0;
height: 0;
}

.slider {
position: absolute;
cursor: pointer;
top: 0;
left: 0;
right: 0;
bottom: 0;
background-color: #ccc;
-webkit-transition: .4s;
transition: .4s;
}

.slider:before {
position: absolute;
content: "";
height: 26px;
width: 26px;
left: 4px;
bottom: 4px;
background-color: white;
-webkit-transition: .4s;
transition: .4s;
}

input:checked + .slider {
background-color: #2196F3;
}

input:focus + .slider {
box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
-webkit-transform: translateX(26px);
-ms-transform: translateX(26px);
transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
border-radius: 34px;
}

.slider.round:before {
border-radius: 50%;
}

.row {
	display: inline-block;
	width: 100%;
	margin-top: 30px;
}

